Adding sources list endpoint
